# animal-classifier-mlops

./: .gitignore  README.md  config.yaml  launch_mlflow_ui.py  main.py  pyproject.toml  run_deployment.py  run_inference.py  run_training.py  streamlit_app.py
.zen/: config.yaml
mlruns/0/: meta.yaml
mlruns/620429494710384069/: meta.yaml
mlruns/620429494710384069/4b17362783d2432f98f7f953bc7331c7/: meta.yaml
mlruns/620429494710384069/4b17362783d2432f98f7f953bc7331c7/tags/: mlflow.runName
mlruns/620429494710384069/78283a614c4b4cfabf0dbc06bbe1a160/: meta.yaml
mlruns/620429494710384069/78283a614c4b4cfabf0dbc06bbe1a160/tags/: mlflow.runName
mlruns/620429494710384069/bb1c11506d7745f38843a44878949425/: meta.yaml
mlruns/620429494710384069/bb1c11506d7745f38843a44878949425/tags/: mlflow.runName
scripts/: deploy.sh
src/config/: __init__.py  loader.py  schema.py
src/data/: __init__.py  dataloader.py  dataset.py
src/evaluators/: __init__.py  evaluation.py
src/materializers/: __init__.py  dataset_bundle_materializer.py  evaluation_output_materializer.py  trained_model_materializer.py
src/models/: __init__.py  artifacts.py  resnet18.py  resnet50.py
src/pipelines/: _shared.py  deployment_pipeline.py  inference_pipeline.py  train_pipeline.py
src/steps/: config.yaml  create_data.py  deploy_model.py  evaluate_model.py  inference.py  test_config.yaml  train_model.py
src/utils/: utils.py
